--- a/config/microConsul.yml
+++ b/config/microConsul.yml
@@ -2,3 +2,7 @@ name: Sir Arthur of Camelot
 quest: To seek the holy grail
 color: Blue
 swallow: What do you mean? An African or European swallow?
+map:
+  robin: brave
+  galahad: pure
+  duck: witch
